# lynx-graph-ml

./: .gitignore  README.MD  pyproject.toml
experiments/arxiv/: bert.py
experiments/cora/: train.py
lynks/: data.py  layers.py  models.py
tests/: test_data.py
