[tool.poetry]
name = "lynks"
version = "0.1.0"
description = "ML on graph data"
authors = ["Thom Pijnenburg"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"
pytorch-lightning = "^2.0.5"
torch-geometric = "^2.3.1"
torch-sparse = "^0.6.17"
torch-scatter = "^2.1.1"
torch-cluster = "^1.6.1"
torch-spline-conv = "^1.2.2"
tqdm = "^4.65.0"
ogb = "^1.3.6"
transformers = "^4.30.2"
typed-argument-parser = "^1.8.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
autopep8 = "^2.0.2"
pytest = "^7.4.0"
tensorboard = "^2.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
